src/test/deca/context/invalid/test_error_3.63-3.deca
// Description:
//    Programme soulevant l'erreur (3.63)
//
// Resultats:
//    Erreur contextuelle
//    Ligne 13 : Le type 'string' est incompatible avec l'opérateur unaire '!' (règle 3.63)
//
// Historique:
//    cree le 14/01/2022

{
	boolean b;
    b = !"toto";
}
